[package]
name = "revm-contract-types"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.7.3", features = ["full", "node-bindings", "rpc-types-debug", "rpc-types-trace", "json-rpc", "rpc-client", "signer-aws", "signer-keystore", "signer-ledger", "signer-mnemonic", "signer-trezor", "signer-yubihsm", "rlp", "transports"] }
revm = { version = "19.4.0", features = ["alloydb", "dev"] }